--- a/README
+++ b/README
@@ -2,5 +2,5 @@ this is a reading and learning record from Rspec Book.
 using gem:
   gem install rspec --version 2.0.0.beta.19
   gem install cucumber --version 0.8.5
- 
+1.an error about class RSpecGreeter,https://github.com/zairl23/test/commit/3fb552a7e919833db293d1767496de099d4c9482 
    
