--- a/HTML5/README
+++ b/HTML5/README
@@ -1,4 +1,7 @@
   学习HTML5
   第一本书是Jeremy Keith's book <HTML5 for designers>
   2.HTML5: Up and Running by Mark Pilgrim
+  3.HTML5 and JavaScript Projects by Jeanine Meyer
+
+
 
